--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="/favicon.ico" sizes="any" />
-    <title>Helius AirShip</title>
+    <title>HAHZ.live Air</title>
   </head>
   <body>
     <div id="root"></div>
